<resources>
    <array name="item_status">
        <item>Item Status</item>
        <item>New</item>
        <item>Like New</item>
        <item>Used</item>
    </array>
    <array name="rank_values">
        <item>Set Rank</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </array>
    <string name="app_name">MedicalEquipmentBiding</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_general_title">Delete Item</string>
    <string name="delete_dialog_general_msg">Are you sure you want to delete this item?</string>
    <string name="register_now_str">Don\'t have an account? Register Now</string>
    <string name="login_as_vendor">Login as Vendor</string>
    <string name="login_as_client">Login as Client</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new account</string>
    <string name="organization_name">Organization Name</string>
    <string name="re_password">Re-Password</string>
    <string name="phone">Phone</string>
    <string name="approve_number">Approve Number</string>
    <string name="account_type">Account Type</string>
    <string name="client">Client</string>
    <string name="vendor">Vendor</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="password_not_match_error">Password and Re-Password do not match</string>
    <string name="address">Address</string>
    <string name="email_password_required">You must enter email and password</string>
    <string name="biding_list">Biding List</string>
    <string name="new_order">New Order</string>
    <string name="save">Save</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="delivery">Delivery</string>
    <string name="add_equipment_item">Add Equipment Item</string>
    <string name="quantity">Quantity</string>
    <string name="notes">Notes</string>
    <string name="select_type">Select Type</string>
    <string name="emptychar"> </string>
    <string name="select_item">Select Item</string>
    <string name="awarding">Awarding</string>
    <string name="offer_price">Offer Price</string>
    <string name="show_offer_details">Show Offer Details</string>
    <string name="offer_list">Offer List</string>
    <string name="offer_details">Offer Details</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="equipment_item">Equipment Item</string>
    <string name="total">Total</string>
    <string name="select_offer">Select Offer</string>
    <string name="active_biding">Active Biding</string>
    <string name="show_history">Show History</string>
    <string name="set_your_offer">Set Your Offer</string>
    <string name="equipment_list">Equipment List</string>
    <string name="order_title">Order Title</string>
    <string name="history">History</string>
    <string name="app_earnings">App Earnings</string>
    <string name="login_as_admin">Login As Admin</string>
</resources>