<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="order"
            type="com.app.medicalequipmentbiding.data.models.BidingOrder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.vendor.OrderDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start"
                    android:layout_margin="8dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_arrow_back"
                    android:onClick="onBackClicked"
                    app:tint="@color/black_2" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black_2"
                    android:textSize="20sp"
                    android:text="@string/set_your_offer"
                    android:textFontWeight="700"
                    tools:text="Set Your Offer"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/order_status"
                android:text="@{order.title}"
                android:textAlignment="viewStart"
                android:textFontWeight="700"
                android:textSize="32sp"
                tools:text="Order Title lsdf skjdfhsdjf " />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="2dp"
                android:textColor="@color/white"
                bind:closeDate="@{order.closeDate}"
                bind:status="@{order.status}"
                tools:text="NEW" />

        </RelativeLayout>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:constraint_referenced_ids="start_date,end_date,is_delivery"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="spread"
            app:flow_verticalGap="8dp"
            app:flow_wrapMode="aligned"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_layout" />

        <!-- Views to be placed behind each other -->
        <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_primary_bg"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/icons8_calendar_24"
            app:drawableTint="@color/white"
            bind:date="@{order.startDate}"
            tools:text="date from" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_accent_bg"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/icons8_calendar_24"
            app:drawableTint="@color/white"
            bind:date="@{order.closeDate}"
            tools:text="date to" />

        <TextView
            android:id="@+id/is_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_third_bg"
            android:drawablePadding="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"
            app:drawableTint="@color/tritary_gray"
            bind:delivery="@{order.delivery}"
            tools:text="@string/delivery" />

        <TextView
            android:id="@+id/equipment_list_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/equipment_list"
            android:textColor="@color/tritary_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow" />

        <LinearLayout
            android:id="@+id/items_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/equipment_list_lbl">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/equipment_item"
                tools:text="Item" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="#" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="Price" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="Status" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/equipment_items_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="64dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/items_header"
            tools:listitem="@layout/set_equipment_offer_item_layout" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/cornered_primary_bg"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="onSaveOfferClicked"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>