<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.client.NewBidingOrderActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start"
                    android:layout_margin="8dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_arrow_back"
                    android:onClick="onBackClicked"
                    app:tint="@color/black_2" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black_2"
                    android:textSize="20sp"
                    android:text="@string/new_order"
                    android:textFontWeight="700"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintBottom_toTopOf="@id/save_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    app:boxStrokeColor="@color/tritary_gray"
                    app:hintTextColor="@color/tritary_gray">

                    <EditText
                        android:id="@+id/title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:inputType="textPersonName"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/date"
                    app:boxStrokeColor="@color/tritary_gray"
                    app:hintTextColor="@color/tritary_gray">

                    <EditText
                        android:id="@+id/date_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:gravity="start|center"
                        android:inputType="date"
                        android:onClick="onDateClicked"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/duration"
                    app:boxStrokeColor="@color/tritary_gray"
                    app:hintTextColor="@color/tritary_gray">

                    <EditText
                        android:id="@+id/duration_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:inputType="numberDecimal"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/dark_gray"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/delivery"
                        android:textSize="16sp"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/delivery_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/equipment_items_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                </ScrollView>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="32dp"
                    android:background="@color/transparent_gray"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:onClick="onAddItemClicked"
                    android:padding="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/add_equipment_item"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textFontWeight="700" />

            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/save_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cornered_primary_bg"
                android:onClick="onSaveClicked"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>