<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="offer"
            type="com.app.medicalequipmentbiding.data.models.Offer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.client.OfferDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageButton
                    android:id="@+id/back_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="start"
                    android:layout_margin="8dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_arrow_back"
                    android:onClick="onBackClicked"
                    app:tint="@color/black_2" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black_2"
                    android:textSize="20sp"
                    android:text="@string/offer_details"
                    android:textFontWeight="700"
                    tools:text="Offer Details"/>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/vendor_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <ImageView
                android:id="@+id/offer_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/medical_order_icon_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/offer_icon"
                android:layout_toStartOf="@id/vendor_rank"
                android:includeFontPadding="false"
                android:text="@{offer.vendorName}"
                android:textSize="16sp"
                tools:text="Vendor Name"/>

            <TextView
                android:id="@+id/vendor_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary"
                android:gravity="end"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text='@{String.format("Rank: %.2f", offer.vendorRank)}'
                android:textColor="@color/white"
                tools:text="Rank: 5.0" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/items_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/vendor_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/equipment_item"
                tools:text="Item" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="#"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="#" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="Price" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:text="Status" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/equipment_items_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/total_layout"
            app:layout_constraintTop_toBottomOf="@id/items_header"
            tools:listitem="@layout/equipment_offer_item_layout" />

        <RelativeLayout
            android:id="@+id/total_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/equipment_items_recyclerview">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/total"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="700"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_offer_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimary"
                android:textFontWeight="700"
                android:textSize="16sp"
                bind:offerPrice="@{offer.itemsOffers}"
                tools:text="10.000 LE" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>